5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1795_3124.log
== SUBMITION (2019-05-30 16:39:12) 
-- CODE:
from numpy import*
array(eval(input "vetor: "))
n = 0
while(n < )
    

-- EXECUTION TIME:
0.167939
-- ERROR:
  File "/home/codebench/codes/1795/3124/main.py", line 2
    array(eval(input "vetor: "))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:16) 
-- CODE:
from numpy import*
array(eval(input "vetor: "))
n = 0
while(n < )
    

-- ERROR:
File "XXXX", line 2
    array(eval(input "vetor: "))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:53) 
-- CODE:
from numpy import*
array(eval(input("vetor: ")))
n = 0
while(n < )
    

-- ERROR:
File "XXXX", line 4
    while(n < )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
